# Mesh-Thumbnailer

./: CMakeLists.txt  README.md  mesh_thumbnailer.cpp
include/mesh_thumbnailer/: mesh_thumbnailer.h
programs/: mesh_thumbnailer_bin.cpp
